per stackoverflow, added a figure:last-child styling of margin-right: 0 to remove spaceing in flex items when numbers are odd. This fixed odd spacing issues.

--- a/wireframe.css
+++ b/wireframe.css
@@ -85,10 +85,14 @@ p, figcaption {line-height: 1.1em;}
 }
 
 figure {
+	display: block;
 	background-color: #ffffff;
-	width: 30%;
+	width: 33.33%;
 	padding: 0;
-	margin: 1em 0;
+}
+
+figure:last-child {
+	margin-right: auto;
 }
 
 .preview-link {
@@ -100,6 +104,7 @@ figure {
 
 figcaption {
 	width: 100%;
+	height: 10em;
 	background-color: cadetblue;
 }
 
